2007-07-07  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4745]
	* stdio-common/vfscanf.c (_IO_vfscanf): Add additional test for EOF
	in loop to look for conversion specifier to avoid testing of
	wrong errno value.
	* stdio-common/Makefile (tests): Add bug18, bug18a, bug19, bug19a.
	* stdio-common/bug18.c: New file.
	* stdio-common/bug18a.c: New file.
	* stdio-common/bug19.c: New file.
	* stdio-common/bug19a.c: New file.

2007-07-05  Mike Frysinger  <vapier@gentoo.org>

	* Makeconfig ($(common-objpfx)gnu/lib-names.stmp): Use LC_ALL=C when
	running awk script.

2007-07-01  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-sysdep.c (_dl_important_hwcaps): Add integer overflow check.
	* elf/dl-minimal.c (__libc_memalign): Likewise.  Handle malloc (0).
	Return NULL if mmap failed instead of asserting it does not.
	(calloc): Check for integer overflow.

	* elf/dl-minimal.c (__strtoul_internal): Fix parsing of numbers bigger
	than LONG_MAX / 10.

2007-07-03  Jakub Jelinek  <jakub@redhat.com>

	[BZ #4702]
	* nis/nss-default.c: Include errno.h.
	(init): Preserve errno.

2007-07-02  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h (PF_UNIX): Update comment.

2007-06-30  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/bits/socket.h: Add PF_RXRPC and AF_RXRPC.

2007-06-29  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/unix/sysv/linux/bits/socket.h: Add PF_IUCV and AF_IUCV.

2007-06-29  Martin Schwidefsky  <schwidefsky@de.ibm.com>

	* sysdeps/s390/dl-procinfo.c: New file.
	* sysdeps/s390/dl-procinfo.h: New file.
	* sysdeps/unix/sysv/linux/s390/dl-procinfo.h: New file.

2007-06-29  Jakub Jelinek  <jakub@redhat.com>

	* elf/dl-load.c (open_verify): Find .note.ABI-tag notes even
	in PT_NOTE segments with multiple notes.
	* elf/readelflib.c (process_elf_file): Likewise.

2007-06-22  Ulrich Drepper  <drepper@redhat.com>

	* nis/nis_domain_of.c (__nis_domain_of): Make the code a bit more
	ISO C compliant.
